# domain-knowledge-skill

./: .gitignore  README.md  pyproject.toml
.claude-plugin/: marketplace.json
commands/: lint.md  search.md
dks/.claude-plugin/: plugin.json
dks/commands/: build-pageindex.md  compile-wiki.md  ingest.md  layers.md
dks/skills/dks-build-pageindex/: SKILL.md
dks/skills/dks-compile-wiki/: SKILL.md
dks/skills/dks-lint-wiki/: SKILL.md
dks/skills/dks-search/: SKILL.md
docs/: USAGE.md
docs/superpowers/notes/: 2026-05-21-phase-2-carryovers.md
docs/superpowers/plans/: 2026-05-21-domain-knowledge-skill-phase1.md  2026-05-21-domain-knowledge-skill-phase2.md  2026-05-21-domain-knowledge-skill-phase3.md  2026-05-25-cascaded-kb-phase4.md  2026-05-26-classification-v0.3.0.md  2026-05-26-pii-redact-v0.3.2.md  2026-05-26-pii-scan-v0.3.1.md
docs/superpowers/specs/: 2026-05-21-domain-knowledge-skill-design.md
eval/: README.md  scoring.md
eval/tasks/: pii-handling-example.md
skills/dks-build-pageindex/: SKILL.md
skills/dks-compile-wiki/: SKILL.md
skills/dks-lint-wiki/: SKILL.md
skills/dks-search/: SKILL.md
src/dks/: __init__.py  block.py  blockref.py  citation_guard.py  cli.py  hints.py  layers.py  locators.py  normalizer.py  redact.py  scan.py  search.py  types.py  writer.py
src/dks/parsers/: __init__.py  docx.py  excel.py  markdown.py  msg.py  pdf.py  pptx.py
src/dks/store/: blocks.py  meta.py  pageindex.py  wiki.py
tests/: test_block.py  test_blockref.py  test_citation_guard.py  test_cli.py  test_hints.py  test_layers.py  test_locators.py  test_normalizer.py  test_redact.py  test_scan.py  test_search.py  test_types.py  test_writer.py
tests/fixtures/: sample.docx  sample.pptx  sample_simple.md  sample_with_headings.md
tests/parsers/: test_docx.py  test_excel.py  test_markdown.py  test_msg.py  test_pdf.py  test_pptx.py  test_registry.py
tests/store/: test_blocks.py  test_meta.py  test_pageindex.py  test_wiki.py
