[project]
name = "dks"
version = "0.0.1"
description = "Domain knowledge skill — citation-grounded RAG for life-insurance code agents"
requires-python = ">=3.12"
dependencies = [
  "pydantic>=2.7",
  "typer>=0.12",
  "openpyxl>=3.1",
  "docling>=2.0",
]

[project.scripts]
dks = "dks.cli:app"

[dependency-groups]
dev = [
  "pytest>=8.0",
  "ruff>=0.6",
  "mypy>=1.10",
  "types-openpyxl>=3.1",
  "python-docx>=1.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/dks"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra -q"
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM"]

[tool.mypy]
strict = true
python_version = "3.12"
mypy_path = "src"
